cambio nombres personas

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
                 <section class="testimony__body testimony__body--show" data-id="1">
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Josue Hernandez, <span class="testimony__course">estudiante
+                        <h2 class="subtitle">Mi nombre es Karina Hernandez, <span class="testimony__course">estudiante
                                 de CSS.</span></h2>
                         <p class="testimony__review">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut est
                             esse, asperiores eaque totam nulla repudiandae quasi, deserunt culpa exercitationem
@@ -185,7 +185,7 @@
 
                 <section class="testimony__body" data-id="2">
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Karina Perez, <span class="testimony__course">estudiante de
+                        <h2 class="subtitle">Mi nombre es daniela Perez, <span class="testimony__course">estudiante de
                                 CSS.</span></h2>
                         <p class="testimony__review">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut est
                             esse, asperiores eaque laborum veniam laboriosam saepe reiciendis dolorem. Cum, ratione
@@ -199,7 +199,7 @@
 
                 <section class="testimony__body" data-id="3">
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Karen Arteaga, <span class="testimony__course">estudiante de
+                        <h2 class="subtitle">Mi nombre es Josue Arteaga, <span class="testimony__course">estudiante de
                                 CSS.</span></h2>
                         <p class="testimony__review">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut est
                             esse, niam laboriosam saepe reiciendis dolorem. Cum, ratione voluptatum!</p>
